--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,12 @@
 name: ChatFilter
 version: '1.0-SNAPSHOT'
 main: com.afa.chatFilter.ChatFilter
-api-version: '1.21'
+api-version: '1.20'
 prefix: Radios
 authors: [ Afa ]
 description: Radio Plugin.
 commands:
   chatfilter:
     description: Manage the chatfilter plugin with one command!
+  debug:
+    description: Used to debug chatfiler.
